--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.1",
+    "react-native-gesture-handler": "^1.4.1",
     "react-native-image-picker": "^1.1.0",
     "react-native-maps": "^0.25.0",
+    "react-native-reanimated": "^1.3.0",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-scrollable-tab-view": "^0.10.0",
-    "react-navigation": "^4.0.10"
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
