--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,6 +180,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_cameraroll')
     implementation project(':react-native-camera')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
