Create a basic maps layout @react-native-community/geolocation

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,8 @@ target 'NativeDeviceFeatures' do
 
   pod 'react-native-cameraroll', :path => '../node_modules/@react-native-community/cameraroll'
 
+  pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
+
   target 'NativeDeviceFeaturesTests' do
     inherit! :search_paths
     # Pods for testing
