--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,12 +180,14 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_geolocation')
     implementation project(':@react-native-community_cameraroll')
     implementation project(':react-native-camera')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
+    implementation project(':react-native-maps')
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
