--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^1.2.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "lottie-react-native": "^3.1.1",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
